# Notions

./: pyproject.toml
backend/: db.sqlite3
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
