[project]
name = "notations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.1",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
